# ovm-bridges

./: .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
backend/: pyproject.toml
data/base/: base_deposits.csv  basic_deposits.csv  counters.csv  daily_volumes.csv  forgotten_funds.csv
data/optimism/: basic_deposits.csv  basic_withdrawals.csv  counters.csv
frontend/: app.py  pyproject.toml
jupyter/: pyproject.toml
jupyter/notebooks/: chainbase.ipynb  testing.ipynb
