[tool.poetry]
name = "ovm-bridges"
version = "0.1.0"
description = ""
authors = ["Marco Germanier <marco@mrgt.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
pandas = "^2.1.3"
numpy = ">=1.22.4,<2"
st-web3-modal = "^0.6.0"
chainbase-python-sdk = {git = "https://github.com/germanier/chainbase_python_sdk"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
